--- a/dashboard.html
+++ b/dashboard.html
@@ -117,8 +117,8 @@
                 </div>
             </div>
             <div class="profile">
-                <span>{{ userName }}</span>
-                <img :src="profilePicture" alt="Profile Picture">
+                <span>John Doe</span>
+                <img src="/src/assets/john doe pic.jpg" alt="Profile Picture">
             </div>
         </div>
 
